# sendspin-rs-cli

./: Cargo.toml  Cross.toml  README.md
.github/: dependabot.yml
.github/workflows/: build.yml
src/: compat.rs  legacy_protocol.rs  lib.rs  main.rs  mdns.rs  player.rs
tests/: integration_test.rs
