[package]
name = "sendspin-rs-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
sendspin = { git = "https://github.com/Sendspin/sendspin-rs" }
clap = { version = "4.5", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
anyhow = "1.0"
log = "0.4"
env_logger = "0.11"
uuid = { version = "1.0", features = ["v4"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures-util = "0.3"
tokio-tungstenite = "0.24"

[patch."https://github.com/Sendspin/sendspin-rs"]
sendspin = { path = "../sendspin-rs" }
